--- a/_posts/2022-07-06-new-to-dnd.md
+++ b/_posts/2022-07-06-new-to-dnd.md
@@ -7,4 +7,4 @@ title: New to D&D
 
 If you're new to D&D, here are some resources to get your started.
 
-Already know everything about D&D, but you're new to West Marches? Try starting [[what-is-west_marches|here]].
+Already know everything about D&D, but you're new to West Marches? Try starting [[2022-07-06-what-is-west-marches|here]].
